# egtkwave

./: README.md
features/net.sf.egtkwave/: .project  feature.xml
gtkwave/: .gitignore  build_linux.sh  build_win32.sh  clean.sh
gtkwave/gtkwave-3.3.52/: .cproject  .project  ANALOG_README.TXT  AUTHORS  ChangeLog  LICENSE.TXT  MIT.TXT  Makefile.am  Makefile.in  README  SYSTEMVERILOG_README.TXT  aclocal.m4  configure  configure.ac
gtkwave/gtkwave-3.3.52/contrib/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/bundle_for_osx/: Info-gtkwave.plist  Makefile.am  Makefile.in  gtkwave.bundle
gtkwave/gtkwave-3.3.52/contrib/fst_jni/: Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/IBM_VISUAL_AGE_PROJECTS/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/antlr/: Makefile.am  Makefile.in  antlr.c  bits.c  err.c  gen.c  parser.dlg  scan.c  tokens.h
gtkwave/gtkwave-3.3.52/contrib/pccts/dlg/: Makefile.am  Makefile.in  dlg_a.c  dlg_p.c  err.c  parser.dlg  tokens.h
gtkwave/gtkwave-3.3.52/contrib/pccts/h/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/sorcerer/: Makefile.am  Makefile.in  gen.c  hash.c  main.c  sor.c
gtkwave/gtkwave-3.3.52/contrib/pccts/sorcerer/h/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/sorcerer/lib/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/sorcerer/test/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/sorcerer/test/test7/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/sorcerer/testcpp/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/support/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/support/DECmms/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/support/genmk/: Makefile.am  Makefile.in  genmk.c
gtkwave/gtkwave-3.3.52/contrib/pccts/support/rexpr/: Makefile.am  Makefile.in  rexpr.c  test.c
gtkwave/gtkwave-3.3.52/contrib/pccts/support/set/: Makefile.am  Makefile.in  set.h
gtkwave/gtkwave-3.3.52/contrib/pccts/support/sym/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/pccts/testcpp/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/contrib/rtlbrowse/: Makefile.am  Makefile.in  definehash.c  fgetdynamic.c  fgetdynamic.h  jrb.c  jrb.h  logfile.c  splay.c  stem_recurse.c  tcl_helper.c  tree_widget.c  vlex.c  vlex.h  vlex.l
gtkwave/gtkwave-3.3.52/contrib/vermin/: Makefile.am  Makefile.in  args.c  attrib.h  err.c  inter.c  inter.h  jrb.c  jrb.h  keyword_tokens.h  keywordhash.c  mode.h  parser.dlg  preproc.c  scan.c  shred.c  shred.h  symbol.c  symbol.h  tokens.h  verilog.c  verilog.g  verilog_keyword.gperf  vpp_common.h
gtkwave/gtkwave-3.3.52/contrib/vpi/: sys_fst.c
gtkwave/gtkwave-3.3.52/doc/: Makefile.in  gtkwave.odt
gtkwave/gtkwave-3.3.52/examples/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/man/: Makefile.am  Makefile.in  rtlbrowse.1  vcd2fst.1
gtkwave/gtkwave-3.3.52/share/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/share/applications/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/: Makefile.am  Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/16x16/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/16x16/mimetypes/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/32x32/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/32x32/mimetypes/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/48x48/: Makefile.in
gtkwave/gtkwave-3.3.52/share/icons/gnome/48x48/mimetypes/: Makefile.in
gtkwave/gtkwave-3.3.52/share/mime/: Makefile.in
gtkwave/gtkwave-3.3.52/src/: Makefile.am  Makefile.in  ae2.c  ae2.h  analyzer.c  analyzer.h  baseconvert.c  bitvec.c  bsearch.c  bsearch.h  busy.c  busy.h  clipping.c  color.c  color.h  currenttime.c  currenttime.h  debug.c  debug.h  discardbuttons.c  edgebuttons.c  edgebuttons.h  entry.c  extload.c  extload.h  fetchbuttons.c  fgetdynamic.c  fgetdynamic.h  file.c  fonts.c  fonts.h  fsdb_wrapper_api.cc  fsdb_wrapper_api.h  fst.c  fst.h  gconf.c  gconf.h  ghw.c  ghw.h  ghwlib.c  (+85 more)
gtkwave/gtkwave-3.3.52/src/cocoa/: Makefile.in
gtkwave/gtkwave-3.3.52/src/helpers/: Makefile.am  Makefile.in  evcd2vcd.c  fst2vcd.c  fstminer.c  ghwdump.c  lxt2_read.c  lxt2_read.h  lxt2miner.c  lxt2vcd.c  scopenav.c  shmidcat.c  v2l_analyzer.h  v2l_analyzer_lxt2.h  v2l_debug.c  v2l_debug.h  v2l_debug_lxt2.c  v2l_debug_lxt2.h  vcd2fst.c  vcd2lxt.c  vcd2lxt2.c  vcd2vzt.c  vzt2vcd.c  vzt_read.c  vzt_read.h  vzt_write.c  vzt_write.h  vztminer.c
gtkwave/gtkwave-3.3.52/src/helpers/fst/: Makefile.in  block_format.txt  fstapi.c  fstapi.h
gtkwave/gtkwave-3.3.52/src/libbz2/: Makefile.in
gtkwave/gtkwave-3.3.52/src/liblzma/: LzmaLib.c  Makefile.in
gtkwave/gtkwave-3.3.52/src/libz/: Makefile.in
gtkwave/jni_win32/: .cproject  .project  build.sh  egtkwave_win32_jni.c
plugins/: .project
plugins/net.sf.edgtkwave.ui.gtkwave.linux.x86_64/: .gitignore  .project
plugins/net.sf.egtkwave.ui/: .project  build.properties  plugin.xml
plugins/net.sf.egtkwave.ui.gtkwave.linux/: .project  fragment.xml
plugins/net.sf.egtkwave.ui.gtkwave.linux/src/net/sf/egtkwave/ui/mgr/: GtkWaveMgr.java  GtkWaveMgrFactory.java
plugins/net.sf.egtkwave.ui.gtkwave.win32/: .gitignore  .project  build.properties
plugins/net.sf.egtkwave.ui.gtkwave.win32/src/net/sf/egtkwave/ui/jni/: GtkWaveJni.java
plugins/net.sf.egtkwave.ui.gtkwave.win32/src/net/sf/egtkwave/ui/mgr/: GtkWaveMgr.java  GtkWaveMgrFactory.java
plugins/net.sf.egtkwave.ui.win32.win32.x86/: .project
plugins/net.sf.egtkwave.ui.win32.win32.x86_64/: .project
plugins/net.sf.egtkwave.ui/schema/: gtkWaveMgrFactory.exsd
plugins/net.sf.egtkwave.ui/src/net/sf/egtkwave/ui/: EGtkWavePlugin.java
plugins/net.sf.egtkwave.ui/src/net/sf/egtkwave/ui/editor/: GTKWaveEditor.java
plugins/net.sf.egtkwave.ui/src/net/sf/egtkwave/ui/mgr/: AbstractGtkWaveMgr.java  IGtkWaveMgr.java  IGtkWaveMgrFactory.java  TclStringUtils.java  TreeNode.java
(+3 files in other folders)
