## -*- makefile -*-
##

EXTRA_DIST= \
	AParser.cpp AParser.h ASTBase.cpp ASTBase.h ATokPtr.h \
	ATokPtrImpl.h AToken.h ATokenBuffer.cpp ATokenBuffer.h \
	ATokenStream.h BufFileInput.cpp BufFileInput.h DLG_stream_input.h \
	DLexer.h DLexerBase.cpp DLexerBase.h PBlackBox.h PCCTSAST.cpp \
	PCCTSAST.h SList.h antlr.h ast.c ast.h charbuf.h charptr.c charptr.h \
	config.h dlgauto.h dlgdef.h err.h int.h pccts_assert.h pccts_iostream.h \
	pccts_istream.h pccts_setjmp.h pccts_stdarg.h pccts_stdio.h pccts_stdlib.h \
	pccts_string.h pcctscfg.h pcctslib50.dsp pcctslib50.dsw pcctslib60.dsp \
	pcctslib60.dsw pcnames.bat slist.cpp

