## -*- makefile -*-
##

EXTRA_DIST= \
	1/makefile 1/test.g \
	2/MyLexer.cpp 2/MyLexer.h 2/makefile 2/test.g \
	3/MyLexer.cpp 3/MyLexer.h 3/makefile 3/mytokens.h 3/test.g \
	4/makefile 4/mytokens.h 4/test.g \
	5/input.h 5/makefile 5/test.g \
	6/file1 6/file2 6/main.cpp 6/makefile 6/makefile2 6/test.g 6/test2.g \
	7/makefile 7/test.g \
	8/main.cpp 8/makefile 8/test.g \
	9/makefile 9/test.g \
	10/makefile 10/test.g \
	11/input.h 11/makefile 11/test.g \
	12/makefile 12/test.g \
	13/makefile 13/test.g

